# glacier-calc

./: CMakeLists.txt  glacier-calc.desktop  glacier-calc.pro
rpm/: glacier-calc.spec
src/: CMakeLists.txt  main.cpp
src/qml/: CalcButton.qml  Display.qml  HistoryDisplay.qml  glacier-calc.qml  glacier-calc.qrc
translations/: glacier-calc.ts  glacier-calc_cs.ts  glacier-calc_de.ts  glacier-calc_fi.ts  glacier-calc_fr.ts  glacier-calc_pl.ts  glacier-calc_ro.ts  glacier-calc_ru.ts  glacier-calc_sk_SK.ts  glacier-calc_uk.ts  glacier-calc_vi.ts
